rm: bold .gitconfig; fix: hx; add: switch (sudo which); broke: create.zsh, new.zsh (bad md)

--- a/.gitconfig
+++ b/.gitconfig
@@ -13,8 +13,8 @@
     excludesfile = ~/.gitignore
 [color "status"]
 	changed = yellow bold
-	added = green bold
-	untracked = red bold
+	added = green 
+	untracked = red 
 [http]
 	cookiefile = ~/.gitcookies
 [url "ssh://git@github.com/"]
