--- a/helix/config.toml
+++ b/helix/config.toml
@@ -6,10 +6,12 @@
 theme            = 'adwaita-dark'
 
 [editor]
+shell = ["zsh", "-c"]
+# rulers = [4, 12, 28]
 line-number       = 'relative'
 idle-timeout      = 3000
-auto-completion   = false
-auto-info         = false
+auto-completion   = true
+auto-info         = true
 scroll-lines      = 1
 gutters           = [ "diff", "diagnostics", "spacer", "line-numbers", "spacer" ]
 color-modes       = true
@@ -19,13 +21,20 @@ true-color        = true
 [editor.statusline] 
 left      = ['mode', 'spinner']
 center    = ['file-name']
-right     = ['diagnostics', 'selections', 'position', 'total-line-numbers']
-separator = '|'
+right     = ['diagnostics', 'selections', 'position', 'total-line-numbers', 'version-control']
+separator = '-'
 
 [editor.cursor-shape]
 insert = 'bar'
 normal = 'block'
 select = 'underline'
+
+[editor.file-picker]
+hidden = false
+max-depth = 3
+
+[editor.soft-wrap]
+enable = true
 
 [keys.normal.w]
 t     = 'transpose_view'
@@ -152,7 +161,7 @@ A-n                 = ':new'
 O                   = ['add_newline_above', 'move_line_up']
 '+'                 = 'extend_search_next'
 'minus'             = 'extend_search_prev'
-'='                 = { '=' = [':w!', 'normal_mode']}
+# '='                 = { '=' = [':w!', 'normal_mode']}
 # h                 = 'no_op'
 # h                 = ['goto_next_paragraph', 'select_regex', 'goto_line_start', 'find_till_char', 'move_char_right', 'align_selections', 'keep_primary_selection']
 # C-S-up            = [ 'push_register', 'extend_line', 'delete_selection', 'move_line_up', 'paste_before', 'pop_register' ]
