--- a/.gitconfig
+++ b/.gitconfig
@@ -17,5 +17,5 @@
 	untracked = red 
 [http]
 	cookiefile = ~/.gitcookies
-[url "ssh://git@github.com/"]
-	insteadOf = https://github.com/
+# [url "ssh://git@github.com/"]
+	# insteadOf = https://github.com/
