--- a/.tmux.conf
+++ b/.tmux.conf
@@ -109,6 +109,7 @@ set -g @bmm-scroll-mode-copy 'on'
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 # set-window-option -g mouse on
 
@@ -119,5 +120,5 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run "$HOME/.tmux/plugins/tpm/tpm"
-# run '~/gitclone/clones/tmux-plugins/tpm/tpm'
+# run "$HOME/.tmux/plugins/tpm/tpm"
+run '~/gitclone/clones/tmux-plugins/tpm/tpm'
