--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,7 +40,7 @@ set -sg escape-time 0
 #### key bindings ####
 # window management
 unbind &
-bind & kill-window
+bind k kill-window
 set -g renumber-windows on # eliminate slack indices after deleting windows
 bind "\\" split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
