--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,7 @@ set -sg escape-time 0
 # window management
 unbind &
 bind k kill-window
+bind p rename-window '#{b:pane_current_path}'
 set -g renumber-windows on # eliminate slack indices after deleting windows
 bind "\\" split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
@@ -68,8 +69,8 @@ bind N new-window
 # synchronize all panes in a window
 # bind y setw synchronize-panes
 
-unbind p
-bind p split-window -hc "#{pane_current_path}" \; select-pane -L \; kill-pane
+# unbind p
+# bind p split-window -hc "#{pane_current_path}" \; select-pane -L \; kill-pane
 
 #### copy mode : vim ####
 
