--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,17 @@ set -sg escape-time 0
 
 #### key bindings ####
 # window management
-unbind &
+# unbind &
+# bind-key -n
+
+bind-key -n C-Right next-window
+bind-key -n C-Left  select-window -t -1
+
+# bind-key -n C-S-Right select-window -t +1
+# bind-key -n C-S-Left  select-window -t -1
+
+
+# bind t new-window
 bind k kill-window
 bind p rename-window '#{b:pane_current_path}'
 set -g renumber-windows on # eliminate slack indices after deleting windows
@@ -48,13 +58,9 @@ bind - split-window -vc "#{pane_current_path}"
 bind Space last-window # toggle to previous window
 bind o new-window
 # pane management
-unbind '%'
-unbind '"'
-unbind c
 unbind x
-bind '%' split-window -hc "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
+unbind t
+bind t new-window -c "#{pane_current_path}"
 bind x kill-pane
 bind j choose-window 'join-pane -h -s "%%"'
 bind J choose-window 'join-pane -s "%%"'
@@ -62,6 +68,8 @@ bind J choose-window 'join-pane -s "%%"'
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
+# bind -n A-r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
+# bind -n A-, run 'hx ~/.tmux.conf'
 
 # quickly open a new window
 bind N new-window
@@ -76,22 +84,20 @@ bind N new-window
 
 # start selection with 'space' and copy using 'y'
 # bind -t vi-copy 'y' copy-selection
-# setw -g mode-keys vi
+setw -g mode-keys vi
 
 # paste using 'p'
 # unbind p
 # bind p paste-buffer
 
-bind -r "<" swap-window -d -t -1
-bind -r ">" swap-window -d -t +1
+bind -n C-S-Left swap-window -d -t -1
+bind -n C-S-Right swap-window -d -t +1
+# bind -r "<" swap-window -d -t -1
+# bind -r ">" swap-window -d -t +1
 
-# copying
-bind C-c run "tmux save-buffer - | xclip -i -selection clipboard"
-bind C-v run 'tmux set-buffer "$(xclip -o -selection clipboard)" && tmux paste-buffer'
-
-
-
-
+# # copying
+# bind C-c run "tmux save-buffer - | xclip -i -selection clipboard"
+# bind C-v run 'tmux set-buffer "$(xclip -o -selection clipboard)" && tmux paste-buffer'
 
 
 
@@ -100,7 +106,10 @@ bind C-v run 'tmux set-buffer "$(xclip -o -selection clipboard)" && tmux paste-b
 
 
 
-setw -g mouse on
+
+
+
+# setw -g mouse on
 set -g mouse on
 # to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
@@ -109,9 +118,10 @@ set -g @bmm-scroll-mode-copy 'on'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 # set-window-option -g mouse on
 
 # Other examples:
