fix: tmux scroll in pager, goc|bat theme, gopls format settings;

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,11 @@ set-option -g status-position top
 # Emulate scrolling by sending up and down keys if these commands are running in the pane
 tmux_commands_with_legacy_scroll="nano less more man git"
 
+# set -g mouse on
+# to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
+# bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+# set -g @bmm-scroll-mode-copy 'on'
+
 bind-key -T root WheelUpPane \
 	if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
 		'send -Mt=' \
@@ -107,13 +112,6 @@ bind -n C-S-Right swap-window -d -t +1
 
 
 
-
-
-# setw -g mouse on
-set -g mouse on
-# to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
-set -g @bmm-scroll-mode-copy 'on'
 
 
 # List of plugins
