--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -13,10 +13,11 @@ notify_on_cmd_finish    always 10.0 bell
 
 dynamic_background_opacity yes
 background_opacity         0.75
-background_image           /home/kendfss/Downloads/980491-city-night-aerial-aerial-view-lights-traffic-building.jpg
+# background_image           /home/kendfss/Downloads/980491-city-night-aerial-aerial-view-lights-traffic-building.jpg
 
 map       ctrl+,           edit_config_file
-map       alt+,            launch hx ~/.tmux.conf
+# map       alt+,            launch hx ~/.tmux.conf
+map       alt+shift+,      launch hx ~/.tmux.conf
 map       kitty_mod+r      load_config_file
 map       kitty_mod+,      launch hx ~/.config/kitty/kitty.conf
 map       kitty_mod+f6     debug_config
