--- a/helix/config.toml
+++ b/helix/config.toml
@@ -127,11 +127,13 @@ q     = [ 'collapse_selection', 'keep_primary_selection' ]
 
 [keys.normal]
 tab       = 'no_op'
+# 'A-,' = 'no_op'
 z         = [ 'delete_char_forward', 'move_next_word_end', 'move_prev_word_start', 'delete_selection_noyank' ]
 '%'       = 'match_brackets'
 'A-/'     = 'toggle_comments'
 S-left    = 'goto_previous_buffer'
 S-right   = 'goto_next_buffer'
+# 'S-,'   = 'remove_primary_selection'
 A-w       = [':w!', ':w!', 'normal_mode']
 A-S-w     = [':write-all!', ':write-all!', 'normal_mode']
 A-c       = ':clipboard-yank'
