rm: pyenv; add: uv with global venv, _cheat sheet fetcher, poc, hostip, gouch, flatline, nuke{,f}, weigh, screen recording /w editing,; fix: sha256, {v,python,go} lang formatting;

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 pending/
+tst/
+tst
 *-bckp
 *.bckp
+*.bk
 languages.toml
 # *DS_Store
 # ._.*
@@ -30,3 +33,10 @@ zsh-*
 go.work
 *.key
 *.keys
+.note
+*.og
+main[0-9]
+settings
+*_go
+bin/
+keeps.md
