--- a/helix/config.toml
+++ b/helix/config.toml
@@ -30,7 +30,7 @@ normal = 'block'
 select = 'underline'
 
 [editor.file-picker]
-hidden = false
+hidden    = false
 max-depth = 3
 
 [editor.soft-wrap]
@@ -134,7 +134,8 @@ z         = [ 'delete_char_forward', 'move_next_word_end', 'move_prev_word_start
 S-left    = 'goto_previous_buffer'
 S-right   = 'goto_next_buffer'
 # 'S-,'   = 'remove_primary_selection'
-A-w       = [':w!', ':w!', ':fmt', 'normal_mode']
+# A-w       = [':w!', ':w!', ':fmt', 'normal_mode']
+A-w       = ':w!'
 A-S-w     = [':write-all!', ':write-all!', 'normal_mode']
 A-c       = ':clipboard-yank'
 A-r       = ':config-reload'
@@ -184,6 +185,7 @@ d     = 'delete_selection_noyank'
 'D'   = 'delete_char_backward'
 'w'   = [ 'move_next_word_end', 'move_prev_word_start', 'delete_selection_noyank' ]
 'W'   = [ 'move_next_long_word_end', 'move_prev_long_word_start', 'delete_selection_noyank']
+
 [keys.select.d.x]
 w     = [ 'move_next_word_end', 'move_prev_word_start', 'yank', 'delete_selection_noyank' ]
 e     = ['extend_next_word_end', 'delete_selection']
