--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
-set -ag terminal-overrides ",alacritty:RGB"
+# set -ag terminal-overrides ",alacritty:RGB"
 # set shell set -g default-shell /bin/zsh
-
+set -g default-terminal "xterm-256color"
 set-option -g status-position top
 # unbind default prefix and set it to ctrl-a
 
