rm: test.* from .gitignore, clone .password-store; add: source .cargo/env, tmux(auto rename windows, index windows from 1, battery level in status bar, white on black status colors), only source elan if installed, gcc as default CC, flatpak dirs to XDG_DATA_DIRS, zathura as zt, deploy(git-filter-repo, github-cli, glow, typst, tinymist, zathura{,-pdf-mupdf}, mpv, wine clementine, nicotine+), goc -ua flag, local keyword in functions, clone -d flag, mass, sf, frc, gf, trans, hx(kage in langs.toml, custom theme), kitty conf reload feedback, zsh shebang in dict|thes;

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ languages.toml
 # ._.*
 *.gz
 *.old
-test.*
+# test.*
 sketch.zsh
 *dump
 sizemap.txt
@@ -43,3 +43,4 @@ settings
 bin/
 keeps.md
 todo.md
+promo.md
