--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,25 @@
 # set -ag terminal-overrides ",alacritty:RGB"
 # set shell set -g default-shell /bin/zsh
 set -g default-terminal "xterm-256color"
+
+set -g automatic-rename on # for windows
+set -g automatic-rename-format '#{b:pane_current_path}'
+set -g renumber-windows on # eliminate slack indices after deleting windows
+set -g base-index 1
+
+# Status Bar
+# Update rate
+set -g status-interval 1  
 set-option -g status-position top
+# Add battery to status bar
+set -g status-right "%H:%M %d-%b-%y #(cat /sys/class/power_supply/BAT0/status | sed 's/Charging/↯/;s/Discharging/▮/;s/Full/✓/')#(cat /sys/class/power_supply/BAT0/capacity)%"
+set -g status-bg black
+set -g status-fg white
+# set -g status-bg blue
+
 # unbind default prefix and set it to ctrl-a
 
+# tmux set-option -g set-clipboard off
 
 # Emulate scrolling by sending up and down keys if these commands are running in the pane
 tmux_commands_with_legacy_scroll="nano less more man git"
@@ -57,8 +73,7 @@ bind-key -n C-Left  select-window -t -1
 
 # bind t new-window
 bind k kill-window
-bind p rename-window '#{b:pane_current_path}'
-set -g renumber-windows on # eliminate slack indices after deleting windows
+# bind p rename-window '#{b:pane_current_path}'
 bind "\\" split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
 bind Space last-window # toggle to previous window
@@ -73,7 +88,7 @@ bind J choose-window 'join-pane -s "%%"'
 # bind-key h split-window -h "vim ~/scratch/notes.md" # new pane with file in vim
 
 # reload config file
-bind r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
+bind r source-file ~/.tmux.conf \; display "tmux conf reloaded!"
 # bind -n A-r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
 # bind -n A-, run 'hx ~/.tmux.conf'
 
