--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,6 +10,7 @@ background_image_layout scaled
 shell                   tmux
 notify_on_cmd_finish    unfocused 
 notify_on_cmd_finish    always 10.0 bell
+copy_on_select          no
 
 dynamic_background_opacity yes
 background_opacity         0.75
@@ -17,8 +18,9 @@ background_opacity         0.75
 
 map       ctrl+,           edit_config_file
 # map       alt+,            launch hx ~/.tmux.conf
-map       alt+shift+,      launch hx ~/.tmux.conf
-map       kitty_mod+r      load_config_file
+# map       alt+shift+,      launch hx ~/.tmux.conf
+map       alt+shift+,      launch tmux new-session -n tmux.conf "hx ~/.tmux.conf"
+map       kitty_mod+r      combine : load_config_file : launch tmux display "kitty conf reloaded"
 map       kitty_mod+,      launch hx ~/.config/kitty/kitty.conf
 map       kitty_mod+f6     debug_config
 map       kitty_mod+f5     load_config_file
