--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ set -g automatic-rename on # for windows
 set -g automatic-rename-format '#{b:pane_current_path}'
 set -g renumber-windows on # eliminate slack indices after deleting windows
 set -g base-index 1
+bind 0 select-window -t :10 # navigate to 10th window by pressing 0
 
 # Status Bar
 # Update rate
