--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -26,7 +26,7 @@ map       kitty_mod+f6     debug_config
 map       kitty_mod+f5     load_config_file
 map       ctrl+shift+c     copy_to_clipboard
 map       ctrl+shift+v     paste_from_clipboard
-map       f1               show_kitty_doc conf
+map       kitty_mod+/      show_kitty_doc conf
 map       kitty_mod+minus  change_font_size all -1.0 
 map       kitty_mod+equal  change_font_size all +1.0 
 map       alt+minus        set_background_opacity -0.15 
