add: golangci conf, day name to tmux conf, git integration in zsh prompt, fl plugin manager alias, git aliases, ripgrep, mpv-mpris, playerctl, enhanced fl command, enhanced play command, grep recursion via gg, goclean, lsp-ai conf in helix, golangci-lint/lsp, mpv transport bindings, cheat (grub,pexp),; fix: mpv track change notifier;

--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -15,7 +15,13 @@ scope            = "source.go"
 auto-format      = true
 file-types       = ["go", "kage"]
 formatter        = { command = "zsh", args = ["-c", 'gofumpt | goimports -local "github.com/kendfss/$(basename $PWD)"'] }
-language-servers = ["gopls", "lsp-ai"]
+language-servers = ["gopls", "lsp-ai", "golangci-lint-lsp"]
+
+[language-server.golangci-lint-lsp]
+command = "golangci-lint-langserver"
+
+[language-server.golangci-lint-lsp.config]
+command = ["golangci-lint", "run", "--output.json.path=stdout", "--show-stats=false", "--issues-exit-code=1"]
 
 [language-server.lsp-ai]
 command = "lsp-ai"
