add: ble.sh integration, direnv hook for bash, git aliases (rs, restage), new functions (tunes, sshplay, ipof, enhanced add), keybindings file, bash prompt support, ACL/xargs cheat sheets, music format variable, fzf/skim support, path deduplication, Termux deployment; rm: .dicterm file, old zsh plugins, poke binary, airport alias, unused environment variables; fix: standardized conditionals, improved path handling, enhanced tmux mouse support, updated dircolors, better plugin management, improved deployment scripts, music player functions, terminal title support, gitignore patterns, virtual environment handling; rename: deploy.zsh to deploy-apt.zsh; reorganize: centralized zsh plugins, better script organization, platform-specific config separation;

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,21 +1,30 @@
 [init]
 	defaultBranch = main
+
 [user]
-	name = kendfss
+	name  = kendfss
 	email = kenneth@kendfss.xyz
+
 [alias]
-    ignore = update-index --assume-unchanged
-    accept = update-index --no-assume-unchanged
+    ignore  = update-index --assume-unchanged
+    accept  = update-index --no-assume-unchanged
     ignored = !git ls-files -v | grep "^[[:lower:]]"
-	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit
+	lg      = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit
+	rs      = reset HEAD~1 --soft
+	restage = reset HEAD~1 --soft
+	
+
 [core]
-	editor = hx
+	editor       = hx
     excludesfile = ~/.gitignore
+
 [color "status"]
-	changed = yellow bold
-	added = green 
+	changed   = yellow bold
+	added     = green 
 	untracked = red 
+
 [http]
 	cookiefile = ~/.gitcookies
+
 # [url "ssh://git@github.com/"]
 	# insteadOf = https://github.com/
