--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.log
+ble.sh/
 mpv/scripts/*.so
 CRUSH.md
 .crush/
@@ -28,8 +29,7 @@ pure/
 purer/
 purity/
 .ssh/
-fast-syntax-highlighting/
-zsh-*
+zsh-plugins/
 *.trash
 *.tst
 # go.sum
@@ -52,3 +52,4 @@ services/*/supervise
 .secrets
 dist/
 helix/runtime/
+services/brightness/.brightness
