--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,8 @@ bind 0 select-window -t :10 # navigate to 10th window by pressing 0
 set -g status-interval 1  
 set-option -g status-position top
 # Add battery to status bar
-set -g status-right " %H:%M %A(%d-%b-%y) #(cat /sys/class/power_supply/BAT0/status | sed 's/Charging/↯/;s/Discharging/▮/;s/Full/✓/')#(cat /sys/class/power_supply/BAT0/capacity)%"
+# set -g status-right " %H:%M %A(%d-%b-%y) #(cat /sys/class/power_supply/BAT0/status | sed 's/Charging/↯/;s/Discharging/▮/;s/Full/✓/')#(cat /sys/class/power_supply/BAT0/capacity)%"
+set -g status-right " %H:%M %A(%d-%b-%y) #(cat /sys/class/power_supply/BAT0/status | sed 's/Charging/↯/;s/Discharging/▮/;s/Full/✓/')#(battery-status)%"
 set -g status-bg black
 set -g status-fg white
 
