--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,7 @@ set -g status-interval 1
 set-option -g status-position top
 # Add battery to status bar
 # set -g status-right " %H:%M %A(%d-%b-%y) #(cat /sys/class/power_supply/BAT0/status | sed 's/Charging/↯/;s/Discharging/▮/;s/Full/✓/')#(cat /sys/class/power_supply/BAT0/capacity)%"
-set -g status-right " %H:%M %A(%d-%b-%y) #(battery-status)#(battery-percentage)%"
+set -g status-right " %H:%M %a(%d-%b-%y) #(battery-status)#(battery-percentage)%"
 set -g status-bg black
 set -g status-fg white
 
