tmux status styling;

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,10 +11,21 @@ bind 0 select-window -t :10 # navigate to 10th window by pressing 0
 set -g status-interval 1  
 set-option -g status-position top
 # Add battery to status bar
-# set -g status-right " %H:%M %A(%d-%b-%y) #(cat /sys/class/power_supply/BAT0/status | sed 's/Charging/↯/;s/Discharging/▮/;s/Full/✓/')#(cat /sys/class/power_supply/BAT0/capacity)%"
 set -g status-right " %H:%M %a(%d-%b-%y) #(battery-status)#(battery-percentage)%"
 set -g status-bg black
 set -g status-fg white
+
+greyLight="#d8dee9"
+greyMedium="#abb2bf"
+greyDark="#3b4252"
+greenSoft="#a3be8c"
+blueMuted="#81a1c1"
+cyanSoft="#88c0d0"
+
+set -g window-status-current-format "#[fg=${cyanSoft},bold]#[underscore]#I:#W"
+set -g window-status-format "#I:#W"
+set -g pane-border-style "fg=${greyDark}"
+set -g pane-active-border-style "fg=${grayMedium}"
 
 
 set-option -g set-clipboard off
@@ -105,6 +116,7 @@ bind -n C-S-Right swap-window -d -t +1
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-capture-pane-contents 'on'
 
 #### Other examples:
 #### set -g @plugin 'github_username/plugin_name'
