tmux status styling;

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ cyanSoft="#88c0d0"
 set -g window-status-current-format "#[fg=${cyanSoft},bold]#[underscore]#I:#W"
 set -g window-status-format "#I:#W"
 set -g pane-border-style "fg=${greyDark}"
-set -g pane-active-border-style "fg=${grayMedium}"
+set -g pane-active-border-style "fg=${greyMedium}"
 
 
 set-option -g set-clipboard off
