--- a/.tmux.conf
+++ b/.tmux.conf
@@ -97,22 +97,10 @@ bind N new-window
 bind y setw synchronize-panes
 
 #### copy mode : vim ####
-
 setw -g mode-keys vi
 
 bind -n C-S-Left swap-window -d -t -1
 bind -n C-S-Right swap-window -d -t +1
-
-
-
-
-
-
-
-
-
-
-
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -126,4 +114,5 @@ set -g @resurrect-capture-pane-contents 'on'
 #### set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/gitclone/clones/tmux-plugins/tpm/tpm'
+# run '~/gitclone/clones/tmux-plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
