--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ bind 0 select-window -t :10 # navigate to 10th window by pressing 0
 set -g status-interval 1  
 set-option -g status-position top
 # Add battery to status bar
-set -g status-right " %H:%M %a(%d-%b-%y) #(battery-status)#(battery-percentage)%"
+set -g status-right " %H:%M %a(%d-%b-%y) #(battery-status)#(battery-percentage)"
 set -g status-bg black
 set -g status-fg white
 
