add: cheat/ to .gitignore, new exports in .zshenv, zsh-sweep plugin in .zshrc, psg, cpv, lsa, ll, la, md, rd, d aliases in aliases.zsh, twb function, changes function, history.zsh, options.zsh; fix: quoting in .zshenv, boolean comparisons in functions.zsh, symlinkDialogue function; rm: multiple config options from .zshenv and .zshrc (moved to new files), Android related exports from aliases.zsh, linkToHome function from deploy-void.zsh, redundant rg -l calls from functions.zsh; update: .gitignore to include new cheat folder and ignore .changes files, conditional Android SDK/NDK setup and Termux/ELAN paths in .zshenv, alias and function loading in .zshrc, symlinkDialogue commands in deploy-termux.zsh and deploy-void.zsh, xbps installation and package lists in deploy-void.zsh, error handling in various deploy scripts; rename: personal/* to cheat/cheatsheets/personal/*;

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,8 @@ services/*/supervise
 dist/
 helix/runtime/
 services/brightness/.brightness
+cheat/
+!cheat/cheatsheets/personal/**
+!cheat/conf.yml
+!cheat/README.md
+*.changes
