--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,8 +59,6 @@ bind-key Escape send-prefix
 
 bind \` switch-client -t'{marked}'
 
-bind k killp
-
 # Make delay shorter
 set -sg escape-time 0
 
@@ -89,6 +87,7 @@ bind J choose-window 'join-pane -s "%%"'
 
 # Reload config file
 bind r source-file ~/.tmux.conf \; display "tmux conf reloaded!"
+# bind S-r send-keys -t '$'
 
 # Quickly open a new window
 bind N new-window
@@ -106,6 +105,7 @@ bind -n C-S-Right swap-window -d -t +1
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-processes 'hx'
 
 #### Other examples:
 #### set -g @plugin 'github_username/plugin_name'
