--- a/helix/config.toml
+++ b/helix/config.toml
@@ -49,9 +49,8 @@ right = 'jump_view_right'
 r   = 'change_selection_noyank'
 c   = 'replace'
 '[' = 'surround_replace'
-# p   = { p = 'replace_with_yanked', c = ':clipboard-paste-replace'}
-l = ['extend_line', 'change_selection_noyank']
-w = ['move_next_word_end', 'move_prev_word_start', 'change_selection_noyank']
+l   = ['extend_line', 'change_selection_noyank']
+w   = ['move_next_word_end', 'move_prev_word_start', 'change_selection_noyank']
 
 [keys.normal.c]
 c = ':clipboard-yank'
@@ -91,9 +90,11 @@ right = 'goto_next_buffer'
 left  = 'goto_previous_buffer'
 b     = 'rotate_view'
 space = 'buffer_picker'
-c     = { o = ':buffer-close-others', c = ':buffer-close' }
+c     = { o = ':buffer-close-others', c = ':buffer-close', a = ':buffer-close-all' }
 h     = ":hsplit"
 v     = ":vsplit"
+p     = ":buffer-previous"
+n     = ":buffer-next"
 
 [keys.normal.d]
 e   = ['extend_next_word_end', 'delete_selection_noyank']
