add: xq function for xbps query; fix: acp function syntax (missing semicolon); rm: commented-out alt+, mappings in kitty; update: tmux-focus renamed to focus with extensive flag support (--panes, --windows, --sessions, --dry-run, --eliminate-current) and refactored logic, kitty keybindings reorganized and aligned.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -17,23 +17,23 @@ background_opacity         0.75
 # background_image           /home/kendfss/Downloads/980491-city-night-aerial-aerial-view-lights-traffic-building.jpg
 
 map       ctrl+,           edit_config_file
-# map       alt+,            launch hx ~/.tmux.conf
-# map       alt+shift+,      launch hx ~/.tmux.conf
-map       alt+shift+,      launch tmux new-session -n tmux.conf "hx ~/.tmux.conf"
-map       kitty_mod+r      combine : load_config_file : launch tmux display "kitty conf reloaded"
-map       kitty_mod+,      launch hx ~/.config/kitty/kitty.conf
 map       kitty_mod+f6     debug_config
 map       kitty_mod+f5     load_config_file
 map       ctrl+shift+c     copy_to_clipboard
 map       ctrl+shift+v     paste_from_clipboard
 map       kitty_mod+/      show_kitty_doc conf
-map       kitty_mod+minus  change_font_size all -1.0 
-map       kitty_mod+equal  change_font_size all +1.0 
+map       alt+f4           quit
+map       ctrl+c           copy_and_clear_or_interrupt
+map       kitty_mod+z      toggle_layout stack
+
+map       alt+shift+,      launch                 tmux new-session -n tmux.conf "hx ~/.tmux.conf"
+map       kitty_mod+r      combine                : load_config_file : launch tmux display "kitty conf reloaded"
+map       kitty_mod+,      launch                 hx ~/.config/kitty/kitty.conf
+map       kitty_mod+minus  change_font_size       all -1.0 
+map       kitty_mod+equal  change_font_size       all +1.0 
 map       alt+minus        set_background_opacity -0.15 
 map       alt+equal        set_background_opacity +0.15 
 map       alt+0            set_background_opacity default
-map       alt+f4           quit
-map       kitty_mod+0      change_font_size all 0
-map       ctrl+c           copy_and_clear_or_interrupt
+map       kitty_mod+0      change_font_size       all 0
 
 mouse_map left doublepress grabbed,ungrabbed mouse_handle_click selection link prompt
