add: wezterm config, helix queries for go/python/markdown, sk index option, helix auto-save, weechat to tmux reload exception, clone function default user handling, xbps install/remove shortcuts; fix: tmux config key bindings, status bar, mouse scrolling, window/pane management, leader keys; update: helix clipboard actions, selection trimming, kitty keymaps, font sizing shortcuts, background opacity controls, ZSH TMUX auto-start condition, history function output; rm: helix yank binding 'z', tmux Space binding to last-window;

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,9 @@ services/*/supervise
 .secrets
 dist/
 helix/runtime/
+!helix/runtime/queries/go/**
+!helix/runtime/queries/python/**
+!helix/runtime/queries/markdown/**
 services/brightness/.brightness
 cheat/
 !cheat/cheatsheets/personal/**
