--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,15 +27,39 @@ set -g pane-border-style "fg=${greyDark}"
 set -g pane-active-border-style "fg=${greyMedium}"
 set -g window-status-current-format "#[fg=${cyanSoft},bold]#[underscore]#I:#W"
 
+# Make input delay shorter
+set -sg escape-time 0
 
 
+set -g history-limit 3000
+set -g prompt-history-limit 3
+set -g display-time 0
 set-option -g set-clipboard off
-bind Delete kill-session
+set -g message-line 0
 
 # Emulate scrolling by sending up and down keys if these commands are running in the pane
 tmux_commands_with_legacy_scroll="nano less more man git bat glow"
 
 set -g mouse on
+
+#### key bindings ####
+unbind d
+unbind C-b
+unbind Escape
+set -g prefix Escape
+bind-key Escape send-prefix
+set -g prefix2 C-b
+bind C-b send-prefix
+
+bind Delete kill-session
+bind Enter run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "#{pane_current_path}" \; set-option destroy-unattached \; display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id}"'
+# bind @ run-shell 'session="$(tmux display-message -p "#S")" && exec kitty'
+bind ? display-popup -w 80% -h 80% -E 'tmp="$(tmux list-keys; tmux list-keys -N)"; echo "$tmp" | sort | sk -e'
+# bind -T prefix ? list-keys -N
+
+# bind Tab customize-mode
+# unbind L
+# bind L select-layout
 
 bind-key -T root WheelUpPane \
 	if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
@@ -51,30 +75,19 @@ bind-key -T root WheelDownPane \
 
 
 
-unbind d
-unbind C-b
-unbind Escape
-set -g prefix Escape
-bind-key Escape send-prefix
-
 bind \` switch-client -t'{marked}'
-
-# Make delay shorter
-set -sg escape-time 0
+bind C switch-client -t'{marked}'
 
 
-#### key bindings ####
 # Window management
 
 bind-key -n C-Right next-window
 bind-key -n C-Left  select-window -t -1
 
-
-
 bind k kill-window
 bind "\\" split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
-bind Space last-window # toggle to previous window
+# bind Space last-window # toggle to previous window
 bind o new-window
 
 # Pane management
