--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,23 +14,24 @@ copy_on_select          no
 
 dynamic_background_opacity yes
 background_opacity         0.75
-# background_image           /home/kendfss/Downloads/980491-city-night-aerial-aerial-view-lights-traffic-building.jpg
+# background_image           /home/kendfss/Pictures/wallpapers/jellyfish-after.jpeg
 
-map       ctrl+,           edit_config_file
+map       kitty_mod+/      show_kitty_doc conf
+# map       ctrl+,           edit_config_file
 map       kitty_mod+f6     debug_config
 map       kitty_mod+f5     load_config_file
 map       ctrl+shift+c     copy_to_clipboard
 map       ctrl+shift+v     paste_from_clipboard
-map       kitty_mod+/      show_kitty_doc conf
 map       alt+f4           quit
 map       ctrl+c           copy_and_clear_or_interrupt
 map       kitty_mod+z      toggle_layout stack
 
+map       ctrl+,           combine                : launch --type=background tmux display-popup -w 80% -h 80% -d ~/.dotfiles "hx ~/.config/kitty/kitty.conf" : load_config_file : launch tmux display "kitty conf reloaded"
 map       alt+shift+,      launch                 tmux new-session -n tmux.conf "hx ~/.tmux.conf"
 map       kitty_mod+r      combine                : load_config_file : launch tmux display "kitty conf reloaded"
 map       kitty_mod+,      launch                 hx ~/.config/kitty/kitty.conf
-map       kitty_mod+minus  change_font_size       all -1.0 
-map       kitty_mod+equal  change_font_size       all +1.0 
+map       ctrl+minus       change_font_size       all -1.0 
+map       ctrl+equal       change_font_size       all +1.0 
 map       alt+minus        set_background_opacity -0.15 
 map       alt+equal        set_background_opacity +0.15 
 map       alt+0            set_background_opacity default
