--- a/helix/config.toml
+++ b/helix/config.toml
@@ -17,6 +17,11 @@ color-modes     = true
 bufferline      = 'multiple'
 true-color      = true
 
+[editor.auto-save]
+focus-lost          = true
+after-delay.enable  = true
+after-delay.timeout = 300000
+
 [editor.statusline]
 left      = ['mode', 'spinner']
 center    = ['file-name']
@@ -53,12 +58,12 @@ l   = ['extend_line', 'change_selection_noyank']
 w   = ['move_next_word_end', 'move_prev_word_start', 'change_selection_noyank']
 
 [keys.normal.c]
-c = ':clipboard-yank'
+c = ['trim_selections', ':clipboard-yank']
 p = 'paste_clipboard_before'
 a = ['select_all', ':clipboard-yank']                                                                                         #'paste_clipboard_after'
 t = ['find_till_char', 'change_selection_noyank']
 T = ['till_prev_char', 'change_selection_noyank']
-l = ['extend_line', ':clipboard-yank']
+l = ['extend_line', 'trim_selections', ':clipboard-yank']
 x = { x = [':clipboard-yank', "delete_selection_noyank"], l = ['extend_line', ':clipboard-yank', 'delete_selection_noyank'] }
 
 [keys.normal.p]
@@ -68,14 +73,13 @@ c = ':clipboard-paste-before'
 o = { l = ['extend_line', 'delete_selection_noyank', 'paste_before'], w = ['move_prev_word_start', 'extend_next_word_end', 'delete_selection_noyank', 'paste_before'], c = ':clipboard-paste-replace', o = 'replace_with_yanked' }
 
 [keys.normal.y]
-c = ':clipboard-yank'
+c = ['trim_selections', ':clipboard-yank']
 y = 'yank'
 x = ['yank', 'delete_selection']
 w = ['save_selection', 'move_prev_word_start', 'move_next_word_end', 'yank', 'jump_backward']
 l = ['save_selection', 'extend_line', 'yank', 'jump_backward']
 a = ['save_selection', 'select_all', 'yank', 'jump_backward']
 s = ':clipboard-yank'
-z = ':sh echo hello world'
 
 [keys.normal.l]
 c   = 'completion'
