add: terminal-overrides ',*:RGB', cursor-colour "${blueMuted}", lines() function; fix: reload config command to use run-shell; update: no other changes;;

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "xterm-256color"
+set -g terminal-overrides ',*:RGB'
 
 set -g automatic-rename on # for windows
 set -g automatic-rename-format '#{b:pane_current_path}'
@@ -26,6 +27,7 @@ set -g window-status-format "#I:#W"
 set -g pane-border-style "fg=${greyDark}"
 set -g pane-active-border-style "fg=${greyMedium}"
 set -g window-status-current-format "#[fg=${cyanSoft},bold]#[underscore]#I:#W"
+set -g cursor-colour "${blueMuted}"
 
 # Make input delay shorter
 set -sg escape-time 0
@@ -99,7 +101,7 @@ bind j choose-window 'join-pane -h -s "%%"'
 bind J choose-window 'join-pane -s "%%"'
 
 # Reload config file
-bind r source-file ~/.tmux.conf \; display "tmux conf reloaded!"
+bind r run-shell 'tmux source-file ~/.tmux.conf && display "tmux conf reloaded!"'
 # bind S-r send-keys -t '$'
 
 # Quickly open a new window
