add: mouse on, tmux popup editor keybind; fix: set-clipboard formatting, bind key spacing; rm: disable default wezterm binds, config.keys nil assignment, commented binds; update: wezterm keybinds, tmux config order, wezterm selection word boundary;;

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,13 +36,13 @@ set -sg escape-time 0
 set -g history-limit 3000
 set -g prompt-history-limit 3
 set -g display-time 0
-set-option -g set-clipboard off
+set -g mouse on
+set -g set-clipboard off
 set -g message-line 0
 
 # Emulate scrolling by sending up and down keys if these commands are running in the pane
 tmux_commands_with_legacy_scroll="nano less more man git bat glow"
 
-set -g mouse on
 
 #### key bindings ####
 unbind d
@@ -55,13 +55,8 @@ bind C-b send-prefix
 
 bind Delete kill-session
 bind Enter run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "#{pane_current_path}" \; set-option destroy-unattached \; display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id}"'
-# bind @ run-shell 'session="$(tmux display-message -p "#S")" && exec kitty'
 bind ? display-popup -w 80% -h 80% -E 'tmp="$(tmux list-keys; tmux list-keys -N)"; echo "$tmp" | sort | sk -e'
 # bind -T prefix ? list-keys -N
-
-# bind Tab customize-mode
-# unbind L
-# bind L select-layout
 
 bind-key -T root WheelUpPane \
 	if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
@@ -77,8 +72,8 @@ bind-key -T root WheelDownPane \
 
 
 
-bind \` switch-client -t'{marked}'
-bind C switch-client -t'{marked}'
+bind \` switch-client -t '{marked}'
+bind C switch-client -t '{marked}'
 
 
 # Window management
