--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,8 @@ bind C-b send-prefix
 
 bind Delete kill-session
 bind Enter run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "#{pane_current_path}" \; set-option destroy-unattached \; display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id}"'
+bind . run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "$DOTFILES" \; set-option destroy-unattached \; display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id}"'
+bind w run-shell 'test -d "$CLONES/tmux/tmux.wiki" && { unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "$CLONES/tmux/tmux.wiki" \; set-option destroy-unattached \; display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id}"; } || tmux display "wiki not cloned"'
 bind ? display-popup -w 80% -h 80% -E 'tmp="$(tmux list-keys; tmux list-keys -N)"; echo "$tmp" | sort | sk -e'
 # bind -T prefix ? list-keys -N
 
