add: .tmux.conf(window-status-current-format zoom indicator, pane navigation bindings for zoom state), functions.zsh(goc -ua flag handling, review function), helix/config.toml(normal mode keybinding for 'a'); update: .tmux.conf(zoom indicator formatting, pane navigation bindings, reload config bind command), .zshenv(RUST_BACKTRACE value), functions.zsh(goc function logic for duplicate header removal, changes function syntax description); fix: functions.zsh(goc function variable usage and flow); impl: .tmux.conf(pane navigation with zoom state preservation), functions.zsh(review function for code review);;

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,8 @@ cyanSoft="#88c0d0"
 set -g window-status-format "#I:#W"
 set -g pane-border-style "fg=${greyDark}"
 set -g pane-active-border-style "fg=${greyMedium}"
-set -g window-status-current-format "#[fg=${cyanSoft},bold]#[underscore]#I:#W"
+set -g window-status-current-format "#[fg=${cyanSoft},bold]#[underscore]#I:#W#{?window_zoomed_flag,(Z),}"
+set -g window-status-current-format "#{?window_zoomed_flag,#[fg=${greenSoft}]\[,}#[fg=${cyanSoft},bold]#[underscore]#I:#W#{?window_zoomed_flag,#[fg=${greenSoft}]\],}"
 set -g cursor-colour "${blueMuted}"
 
 # Make input delay shorter
@@ -97,8 +98,22 @@ bind x kill-pane
 bind j choose-window 'join-pane -h -s "%%"'
 bind J choose-window 'join-pane -s "%%"'
 
+# Save the current zoom state and zoom after switching panes
+bind -r Left if-shell -F '#{window_zoomed_flag}' \
+    'select-pane -L; resize-pane -Z' \
+    'select-pane -L'
+bind -r Down if-shell -F '#{window_zoomed_flag}' \
+    'select-pane -D; resize-pane -Z' \
+    'select-pane -D'
+bind -r Up if-shell -F '#{window_zoomed_flag}' \
+    'select-pane -U; resize-pane -Z' \
+    'select-pane -U'
+bind -r Right if-shell -F '#{window_zoomed_flag}' \
+    'select-pane -R; resize-pane -Z' \
+    'select-pane -R'
+
 # Reload config file
-bind r run-shell 'tmux source-file ~/.tmux.conf && display "tmux conf reloaded!"'
+bind r run-shell 'tmux source-file ~/.tmux.conf && tmux display "tmux conf reloaded!"'
 # bind S-r send-keys -t '$'
 
 # Quickly open a new window
