add: bind-key 'n' run-shell script for window replacement;

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,6 +53,7 @@ set -g prefix Escape
 bind-key Escape send-prefix
 set -g prefix2 C-b
 bind C-b send-prefix
+bind-key n run-shell 'OLD=$(tmux display-message -p "#{window_id}") && tmux new-window -c "#{pane_current_path}" && tmux kill-window -t "$OLD"'
 
 bind Delete kill-session
 bind Enter run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "#{pane_current_path}" \; set-option destroy-unattached \; display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id}"'
