--- a/helix/config.toml
+++ b/helix/config.toml
@@ -80,6 +80,8 @@ w = ['save_selection', 'move_prev_word_start', 'move_next_word_end', 'yank', 'ju
 l = ['save_selection', 'extend_line', 'yank', 'jump_backward']
 a = ['save_selection', 'select_all', 'yank', 'jump_backward']
 s = ':clipboard-yank'
+j = { j = 'yank_joined', c = ':clipboard-yank-join' }
+d = ':yank-diagnostic'
 
 [keys.normal.l]
 c   = 'completion'
@@ -130,11 +132,18 @@ t     = 'extend_till_char'
 p     = 'extend_till_prev_char'
 q     = ['collapse_selection', 'keep_primary_selection']
 
+[keys.normal.j]
+j = 'jumplist_picker'
+f = 'jump_forward'
+b = 'jump_backward'
+
 [keys.normal]
 tab       = 'no_op'
 z         = ['delete_char_forward', 'move_next_word_end', 'move_prev_word_start', 'delete_selection_noyank']
 '%'       = 'match_brackets'
 'A-/'     = 'toggle_comments'
+'A-?'     = 'toggle_block_comments'
+'|'       = { '|' = 'shell_pipe', '\' = 'shell_pipe_to', '$' = 'shell_keep_pipe', '!' = 'shell_insert_output', 1 = 'shell_append_output' }
 S-left    = 'goto_previous_buffer'
 S-right   = 'goto_next_buffer'
 A-w       = ':w!'
@@ -163,6 +172,8 @@ A-n       = ':new'
 O         = ['add_newline_above', 'move_line_up']
 '+'       = 'extend_search_next'
 'minus'   = 'extend_search_prev'
+del       = 'trim_selections'
+'#'       = { '#' = 'select_register', ret = 'insert_register', tab = 'copy_between_registers', backspace = ':clear-register' }
 
 [keys.select]
 '='    = { '=' = [':w!', 'normal_mode'] }
